--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -6,7 +6,12 @@
     }
 
     .bento-grid {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         gap: max(7vw, 3.5rem);
 
@@ -111,6 +116,9 @@
 
         text-align: center;
 
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         gap: 0;
 
@@ -166,7 +174,7 @@
         & img {
             max-width: 70%;
         }
-       
+
     }
 
     .feature-ai {
@@ -174,7 +182,7 @@
 
         & h2 {
             max-width: 95%;
-            
+
             margin-bottom: 9%;
 
             font-size: max(7vw, 2.9rem);
@@ -188,7 +196,7 @@
 
     .site-footer {
         padding: 2%;
-        
+
         font-size: max(1.2rem, 3vw);
         line-height: max(1rem, 3vw);
     }
